# aswitch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USAGE.md
.github/workflows/: ci.yml  homebrew.yml
assets/bundled-plugins/: README.md
assets/bundled-plugins/claude-code/: plugin.toml
assets/bundled-plugins/codex/: plugin.toml
assets/bundled-plugins/gemini/: plugin.toml
assets/bundled-plugins/opencode/: plugin.toml
crates/aswitch-cli/: Cargo.toml  build.rs
crates/aswitch-cli/src/: bundled.rs  main.rs
crates/aswitch-cli/src/cmd/: accounts.rs  init.rs  live.rs  login.rs  mod.rs  plugins.rs  project.rs  prompt.rs  scope.rs  session.rs  shell.rs  usage.rs
crates/aswitch-cli/src/tui/: mod.rs
crates/aswitch-core/: Cargo.toml
crates/aswitch-core/src/: account.rs  claude.rs  codex.rs  gemini.rs  identity.rs  lib.rs  paths.rs  registry.rs  session.rs  switch.rs  usage.rs
crates/aswitch-core/src/plugin/: mod.rs
crates/aswitch-core/src/store/: file.rs  keychain.rs  mod.rs
