[package]
name = "aswitch-core"
description = "Core library for aswitch: atomic AI agent account switching, identity extraction, and usage collection."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
fs2 = "0.4"
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
urlencoding = "2"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", default-features = false, features = ["rt-async-io-crypto-rust"] }

[dev-dependencies]
tempfile = "3"
